--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hiredis",
+  "name": "hiredis-hapi",
   "description": "Wrapper for reply processing code in hiredis",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "homepage": "http://github.com/redis/hiredis-node",
   "author": "Jan-Erik Rediger <janerik@fnordig.de>",
   "contributors": [
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "bindings": "^1.2.1",
-    "nan": "^2.3.4"
+    "nan": "^2.17.0"
   },
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 12"
   },
   "repository": {
     "type": "git",
