--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "deps/hiredis"]
 	path = deps/hiredis
-	url = git://github.com/redis/hiredis.git
+	url = https://github.com/humanapi/hiredis.git
+	branch = release_0.14.0
